# esp32-loop

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/esp32-loop/: SKILL.md
boards/: c3_supermini.toml  esp32_devkit.toml  esp32cam.toml
esp32loop/: __init__.py  boards.py  cli.py  mcp.py  runtime.py  transport.py
examples/ble_control/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32
examples/ble_control/main/: CMakeLists.txt  ble_control_main.c
examples/wifi_provision/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
examples/wifi_provision/main/: CMakeLists.txt  wifi_provision_main.c
