[project]
name = "esp32-loop"
version = "0.0.1"
description = "Fast flash→observe→iterate loop between ESP32 boards and an AI agent."
requires-python = ">=3.11"          # tomllib; uv guarantees it over macOS's 3.9
dependencies = ["esptool>=4.7", "pyserial>=3.5", "bleak>=0.22"]

# The MCP server is opt-in: the CLI is the substrate, the MCP wraps its runtime
# verbs for non-Bash clients (Claude Desktop, a hosted agent). `uv sync --extra mcp`.
[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
esp32loop = "esp32loop.cli:main"
esp32loop-mcp = "esp32loop.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esp32loop"]
